--- a/randomQuoteMachine/index.html
+++ b/randomQuoteMachine/index.html
@@ -1,3 +1,6 @@
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-<div>Hello!</div>
+  <div>Hello!</div>
+
+</body>
