HTML and CSS for layout

--- a/randomQuoteMachine/index.html
+++ b/randomQuoteMachine/index.html
@@ -1,6 +1,21 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
+</head>
+
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <div>Hello!</div>
+  <div id="quote-box">
+    <div id="text">"I am brilliant."</div>
+    <div id="author">-A.Cheng</div>
+    <div id="new-quote">New quote</div>
+    <a id="tweet-quote"href="twitter.com/intent/tweet">
+        <i class="fa fa-twitter-square"></i>
+    </a>
+
+  </div>
+  <div id="credit">Random quote machine by CT</div>
 
 </body>
