All tests passes

--- a/randomQuoteMachine/index.html
+++ b/randomQuoteMachine/index.html
@@ -8,8 +8,8 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <div id="quote-box">
-    <div id="text">"I am brilliant."</div>
-    <div id="author">-A.Cheng</div>
+    <div id="text">"Science without religion is lame, religion without science is blind."</div>
+    <div id="author">-Albert Einstein</div>
     <div id="new-quote">New quote</div>
     <a id="tweet-quote"href="twitter.com/intent/tweet">
         <i class="fa fa-twitter-square"></i>
@@ -17,5 +17,7 @@
 
   </div>
   <div id="credit">Random quote machine by CT</div>
+  <script src="quotes.js"></script>
+  <script src="app.js"></script>
 
 </body>
