--- a/randomQuoteMachine/index.html
+++ b/randomQuoteMachine/index.html
@@ -17,6 +17,8 @@
 
   </div>
   <div id="credit">Random quote machine by CT</div>
+  <script src="jquery-1.11.0.min.js"></script>
+  <script src="jquery.color-2.1.2.min.js"></script>
   <script src="quotes.js"></script>
   <script src="app.js"></script>
 
